refactor: 升级到 JDK21 采用虚拟线程执行文件向量化逻辑、优化 CI CD 配置信息、删除冗余代码